[package]
name = "eth_etl"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"]}
serde = { version = "1.0", featrues = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
tokio-postgres = { version = "0.7", featrues = ["with-sede_json-1"] }
